# kintai-sync

./: .coverage  .gitignore  ARCHITECTURE_RATIONALE.md  DEPLOY_CHECKPOINT.md  Dockerfile.receiver  Dockerfile.worker  HANDOVER.md  Makefile  README.md  config.yaml  google_apps_script.js  main.py  pyproject.toml  requirements.md  requirements.txt  roadmap.md  test_data.csv
docs/: ARCHITECTURE_RATIONALE.md  LOCAL_DEBUG_GUIDE.md  SLACK_SETUP_GUIDE.md  requirements.md  roadmap.md
scripts/: get_sheets_oauth_token.py  verify_jobcan.py
src/: calendar.py  config.py  history.py  jobcan.py  main.py  models.py  parser.py  receiver.py  secrets.py  slack.py  sync.py
terraform/: cleanup.tf  deploy.tf  main.tf  monitoring.tf  provider.tf  sync_schedule.tf  variables.tf
tests/: test_calendar.py  test_history.py  test_jobcan.py  test_main.py  test_models.py  test_parser.py  test_receiver.py  test_secrets.py  test_slack.py  test_sync.py  test_sync_endpoint.py
