[project]
name = "kintai-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask[async]>=3.1.3",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.1",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud-aiplatform>=1.158.0",
    "google-cloud-firestore>=2.28.0",
    "google-cloud-secret-manager>=2.29.0",
    "google-cloud-storage>=3.12.0",
    "google-cloud-tasks>=2.23.0",
    "gunicorn>=26.0.0",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "slack-sdk>=3.42.0",
]
